AC_INIT([elementary-icon-theme], 3.2.2, [https://github.com/elementary/icons/issues], [elementary-icon-theme], [https://elementary.io//])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-pax])
AC_PREFIX_DEFAULT(/usr/local)
AM_SILENT_RULES([yes])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Elementary Icon Theme $VERSION
        ========

        prefix:                 ${prefix}
        exec_prefix:            ${exec_prefix}
        datarootdir:            ${datarootdir}
])
