set (ACTIONSDIR "${ICONDIR}/actions")
set (ACTIONS2XDIR "${ICONDIR}/actions@2x")
# 128x128
file (GLOB ACTIONS_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${ACTIONS_128} DESTINATION ${ACTIONSDIR}/128)
install (FILES ${ACTIONS_128} DESTINATION ${ACTIONS2XDIR}/128)
# 64x64
file (GLOB ACTIONS_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${ACTIONS_64} DESTINATION ${ACTIONSDIR}/64)
install (FILES ${ACTIONS_64} DESTINATION ${ACTIONS2XDIR}/64)
# 48x48
file (GLOB ACTIONS_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${ACTIONS_48} DESTINATION ${ACTIONSDIR}/48)
install (FILES ${ACTIONS_48} DESTINATION ${ACTIONS2XDIR}/48)
# 32x32
file (GLOB ACTIONS_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${ACTIONS_32} DESTINATION ${ACTIONSDIR}/32)
install (FILES ${ACTIONS_32} DESTINATION ${ACTIONS2XDIR}/32)
# 24x24
file (GLOB ACTIONS_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${ACTIONS_24} DESTINATION ${ACTIONSDIR}/24)
install (FILES ${ACTIONS_24} DESTINATION ${ACTIONS2XDIR}/24)
# 16x16
file (GLOB ACTIONS_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${ACTIONS_16} DESTINATION ${ACTIONSDIR}/16)
install (FILES ${ACTIONS_16} DESTINATION ${ACTIONS2XDIR}/16)
# symbolic
file (GLOB ACTIONS_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${ACTIONS_SYMBOLIC} DESTINATION ${ACTIONSDIR}/symbolic)
