set (APPSDIR "${ICONDIR}/apps")
set (APPS2XDIR "${ICONDIR}/apps@2x")
# 128x128
file (GLOB APPS_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${APPS_128} DESTINATION ${APPSDIR}/128)
install (FILES ${APPS_128} DESTINATION ${APPS2XDIR}/128)
# 64x64
file (GLOB APPS_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${APPS_64} DESTINATION ${APPSDIR}/64)
install (FILES ${APPS_64} DESTINATION ${APPS2XDIR}/64)
# 48x48
file (GLOB APPS_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${APPS_48} DESTINATION ${APPSDIR}/48)
install (FILES ${APPS_48} DESTINATION ${APPS2XDIR}/48)
# 32x32
file (GLOB APPS_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${APPS_32} DESTINATION ${APPSDIR}/32)
install (FILES ${APPS_32} DESTINATION ${APPS2XDIR}/32)
# 24x24
file (GLOB APPS_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${APPS_24} DESTINATION ${APPSDIR}/24)
install (FILES ${APPS_24} DESTINATION ${APPS2XDIR}/24)
# 16x16
file (GLOB APPS_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${APPS_16} DESTINATION ${APPSDIR}/16)
install (FILES ${APPS_16} DESTINATION ${APPS2XDIR}/16)
# symbolic
file (GLOB APPS_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${APPS_SYMBOLIC} DESTINATION ${APPSDIR}/symbolic)
