set (CATEGORIESDIR "${ICONDIR}/categories")
set (CATEGORIES2XDIR "${ICONDIR}/categories@2x")
# 128x128
file (GLOB CATEGORIES_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${CATEGORIES_128} DESTINATION ${CATEGORIESDIR}/128)
install (FILES ${CATEGORIES_128} DESTINATION ${CATEGORIES2XDIR}/128)
# 64x64
file (GLOB CATEGORIES_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${CATEGORIES_64} DESTINATION ${CATEGORIESDIR}/64)
install (FILES ${CATEGORIES_64} DESTINATION ${CATEGORIES2XDIR}/64)
# 48x48
file (GLOB CATEGORIES_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${CATEGORIES_48} DESTINATION ${CATEGORIESDIR}/48)
install (FILES ${CATEGORIES_48} DESTINATION ${CATEGORIES2XDIR}/48)
# 32x32
file (GLOB CATEGORIES_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${CATEGORIES_32} DESTINATION ${CATEGORIESDIR}/32)
install (FILES ${CATEGORIES_32} DESTINATION ${CATEGORIES2XDIR}/32)
# 24x24
file (GLOB CATEGORIES_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${CATEGORIES_24} DESTINATION ${CATEGORIESDIR}/24)
install (FILES ${CATEGORIES_24} DESTINATION ${CATEGORIES2XDIR}/24)
# 16x16
file (GLOB CATEGORIES_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${CATEGORIES_16} DESTINATION ${CATEGORIESDIR}/16)
install (FILES ${CATEGORIES_16} DESTINATION ${CATEGORIES2XDIR}/16)
# symbolic
file (GLOB CATEGORIES_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${CATEGORIES_SYMBOLIC} DESTINATION ${CATEGORIESDIR}/symbolic)
