set (DEVICESDIR "${ICONDIR}/devices")
set (DEVICES2XDIR "${ICONDIR}/devices@2x")
# 128x128
file (GLOB DEVICES_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${DEVICES_128} DESTINATION ${DEVICESDIR}/128)
install (FILES ${DEVICES_128} DESTINATION ${DEVICES2XDIR}/128)
# 64x64
file (GLOB DEVICES_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${DEVICES_64} DESTINATION ${DEVICESDIR}/64)
install (FILES ${DEVICES_64} DESTINATION ${DEVICES2XDIR}/64)
# 48x48
file (GLOB DEVICES_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${DEVICES_48} DESTINATION ${DEVICESDIR}/48)
install (FILES ${DEVICES_48} DESTINATION ${DEVICES2XDIR}/48)
# 32x32
file (GLOB DEVICES_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${DEVICES_32} DESTINATION ${DEVICESDIR}/32)
install (FILES ${DEVICES_32} DESTINATION ${DEVICES2XDIR}/32)
# 24x24
file (GLOB DEVICES_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${DEVICES_24} DESTINATION ${DEVICESDIR}/24)
install (FILES ${DEVICES_24} DESTINATION ${DEVICES2XDIR}/24)
# 16x16
file (GLOB DEVICES_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${DEVICES_16} DESTINATION ${DEVICESDIR}/16)
install (FILES ${DEVICES_16} DESTINATION ${DEVICES2XDIR}/16)
# symbolic
file (GLOB DEVICES_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${DEVICES_SYMBOLIC} DESTINATION ${DEVICESDIR}/symbolic)
